@@ -1,10 +1,12 @@
 package de.factoryfx.example;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.List;
 
-import de.factoryfx.example.factory.ShopFactory;
+import de.factoryfx.example.server.ServerRootFactory;
 import de.factoryfx.factory.FactoryBase;
 import de.factoryfx.factory.util.ClasspathBasedFactoryProvider;
 import de.factoryfx.factory.validator.FactoryStyleValidation;
@@ -20,16 +22,18 @@ public class FactoryTest {
     public static Iterable<Object[]> data1() throws IOException {
         List<Object[]> result = new ArrayList<>();
         final FactoryStyleValidator factoryStyleValidator = new FactoryStyleValidator();
-        for (Class<? extends FactoryBase> clazz: new ClasspathBasedFactoryProvider().get(ShopFactory.class)){
-
-            try {
-                final List<FactoryStyleValidation> factoryValidations = factoryStyleValidator.createFactoryValidations(clazz.newInstance());
-                for (FactoryStyleValidation factoryStyleValidation: factoryValidations){
-                    result.add(new Object[]{factoryStyleValidation,clazz.getName()+":"+factoryStyleValidation.getClass().getSimpleName()});
+        for (Class<? extends FactoryBase> clazz: new ClasspathBasedFactoryProvider().get(ServerRootFactory.class)){
+            if (!Modifier.isAbstract( clazz.getModifiers() )){
+                try {
+                    final List<FactoryStyleValidation> factoryValidations = factoryStyleValidator.createFactoryValidations(clazz.getConstructor().newInstance());
+                    for (FactoryStyleValidation factoryStyleValidation: factoryValidations){
+                        result.add(new Object[]{factoryStyleValidation,clazz.getName()+":"+factoryStyleValidation.getClass().getSimpleName()});
+                    }
+                } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
+                    throw new RuntimeException(e);
                 }
-            } catch (InstantiationException | IllegalAccessException e) {
-                throw new RuntimeException(e);
             }
+
 //            result.add(new Object[]{clazz});
         }
 
